--- a/api/package.json
+++ b/api/package.json
@@ -20,5 +20,8 @@
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.8.0"
+  },
+  "devDependencies": {
+    "husky": "^7.0.4"
   }
 }
