--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.24.0",
     "formik": "^2.2.9",
     "hover.css": "^2.3.2",
+    "jwt-decode": "^3.1.2",
     "nodemon": "^2.0.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
