--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
     "hover.css": "^2.3.2",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.7.1",
     "nodemon": "^2.0.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -25,7 +27,7 @@
     "react-player": "^2.9.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^3.4.4",
     "redux-thunk": "^2.4.0",
     "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.3",
