--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "google-auth-library": "^7.10.1",
     "jsonwebtoken": "^8.5.1",
+    "mercadopago": "^1.5.9",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.14",
     "pg": "^8.7.1",
