--- a/api/package.json
+++ b/api/package.json
@@ -4,10 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index",
-    "client": "cd ../client && npm start",
-    "dev": "concurrently \"npm run start\" \"npm run client\"",
-    "seed": "node src/utils/mocks/reviews.js",
+    "start": "nodemon -L",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -32,6 +29,7 @@
     "sequelize": "^6.8.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.13", 
     "concurrently": "^6.3.0",
     "husky": "^7.0.4"
   }
