--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^10.0.0",
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
     "hover.css": "^2.3.2",
