--- a/api/package.json
+++ b/api/package.json
@@ -22,15 +22,14 @@
     "jsonwebtoken": "^8.5.1",
     "mercadopago": "^1.5.9",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.14",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "request": "^2.88.2",
     "sequelize": "^6.8.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.13",
     "concurrently": "^6.3.0",
-    "husky": "^7.0.4"
+    "husky": "^7.0.4",
+    "nodemon": "^2.0.14"
   }
 }
