--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mercadopago": "^1.5.9",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.14",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "request": "^2.88.2",
