--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 SKIP_PREFLIGHT_CHECK=true
-//REACT_APP_AWS_PORT=http://localhost:3001/api
-REACT_APP_AWS_PORT=https://drops-store.herokuapp.com/api
+REACT_APP_AWS_PORT=http://localhost:3001/api
+//REACT_APP_AWS_PORT=https://drops-store.herokuapp.com/api
