--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,7 @@
     "react-player": "^2.9.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "4.0.3",
     "recharts": "^2.1.6",
     "redux-thunk": "^2.4.0",
     "scrollreveal": "^4.0.9",
