--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.3",
     "sweetalert": "^2.1.2",
+    "toggle-switch-rn": "^1.3.7",
     "vanilla-tilt": "^1.7.2",
     "web-vitals": "^2.1.2"
   },
