--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "google-auth-library": "^7.10.1",
+    "googleapis": "^91.0.0",
     "jsonwebtoken": "^8.5.1",
     "mercadopago": "^1.5.9",
     "morgan": "^1.10.0",
