--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.0.5",
     "@mui/styled-engine-sc": "^5.0.3",
     "@mui/styles": "^5.0.2",
+    "@mui/x-data-grid": "^4.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
