--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "google-auth-library": "^7.10.1",
     "googleapis": "^91.0.0",
