--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "@mailchimp/mailchimp_marketing": "^3.0.71",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "cloudinary": "^1.27.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
