--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@material-ui/styles": "^4.11.4",
+    "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.5",
     "@mui/styled-engine-sc": "^5.0.3",
